# SmartTrafficLight

./: .gitignore  CMakeLists.txt  README.md  center.cpp  center.h  checkcarinarea.cpp  checkcarinarea.h  checkpeopleprocessor.cpp  checkpeopleprocessor.h  detectmovetprocessor.cpp  detectmovetprocessor.h  filterdetectionframe.cpp  filterdetectionframe.h  filtermovedetectframe.cpp  filtermovedetectframe.h  findcarprocessor.cpp  findcarprocessor.h  light.cpp  light.h  lightcontroller.cpp  lightcontroller.h  lightgroup.h  main.cpp  movepreprocessor.cpp  movepreprocessor.h  path.cpp  path.h  preprocessor.cpp  preprocessor.h
